fix the alignment of profile-container section

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body {
 .mid-section-content {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     text-align: center;
     gap: 80px;
 
@@ -113,9 +113,18 @@ body {
     list-style-type: none;
 }
 
+
+.profile-container {
+    max-width: 15%;
+    text-align: start;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .profile-pic {
-    height: 100px;
-    width: 100px;
+    height: 200px;
+    width: 200px;
     object-fit: cover;
     border-radius: 10px;
     padding: 10px;
